--- a/forms/serReqForm_approval_action.json
+++ b/forms/serReqForm_approval_action.json
@@ -127,27 +127,11 @@
         }
     }],
     "properties": {
-        "description": "",
+        "elementUniqueKey": "4895",
         "id": "serReqForm_approval_action",
-        "loadBinder": {
-            "className": "org.joget.apps.form.lib.WorkflowFormBinder",
-            "properties": {}
-        },
+        "loadBinder": {"className": "org.joget.apps.form.lib.WorkflowFormBinder"},
         "name": "Service Request Form Approval Action",
-        "noPermissionMessage": "",
-        "permission": {
-            "className": "",
-            "properties": {}
-        },
-        "postProcessor": {
-            "className": "",
-            "properties": {}
-        },
-        "postProcessorRunOn": "create",
-        "storeBinder": {
-            "className": "org.joget.apps.form.lib.WorkflowFormBinder",
-            "properties": {}
-        },
+        "storeBinder": {"className": "org.joget.apps.form.lib.WorkflowFormBinder"},
         "tableName": "ofc_serReqs_tab_a"
     }
 }
