Update form serReqApprovalDoc.

--- a/forms/serReqApprovalDoc.json
+++ b/forms/serReqApprovalDoc.json
@@ -42,7 +42,7 @@
                         "validator": {
                             "className": "org.joget.apps.form.lib.DefaultValidator",
                             "properties": {
-                                "custom-regex": "[a-zA-Z&()_-:|\\/]",
+                                "custom-regex": "[a-zA-Z]",
                                 "custom-regex-casesensitive": "",
                                 "mandatory": "true",
                                 "message": "alphabets with special characters () _ - : \\ | / allowed",
