Update form serReqApprovalDoc.

--- a/forms/serReqApprovalDoc.json
+++ b/forms/serReqApprovalDoc.json
@@ -22,8 +22,8 @@
                             "className": "org.joget.apps.form.lib.DefaultValidator",
                             "properties": {
                                 "mandatory": "true",
-                                "message": "alphabets only",
-                                "type": "alphabet"
+                                "message": "",
+                                "type": ""
                             }
                         },
                         "value": "",
