Update form serReqApprovalDoc.

--- a/forms/serReqApprovalDoc.json
+++ b/forms/serReqApprovalDoc.json
@@ -36,11 +36,18 @@
                     "className": "org.joget.apps.form.lib.TextArea",
                     "properties": {
                         "cols": "20",
-                        "id": "field2",
-                        "label": "Text Area",
-                        "readonly": "False",
-                        "readonlyLabel": "False",
-                        "rows": "5"
+                        "id": "description",
+                        "label": "Description(optional)",
+                        "placeholder": "",
+                        "readonly": "",
+                        "readonlyLabel": "",
+                        "rows": "5",
+                        "validator": {
+                            "className": "",
+                            "properties": {}
+                        },
+                        "value": "",
+                        "workflowVariable": ""
                     }
                 }
             ],
