--- a/lists/ofc_app_inspector_job_history.json
+++ b/lists/ofc_app_inspector_job_history.json
@@ -241,9 +241,9 @@
         "properties": {
             "confirmation": "",
             "datalist_type": "row_action",
-            "href": "http://localhost:8080/jw/web/userview/ofc_app/v/_/inspectionreportview",
-            "hrefColumn": "C_serReqDmccSrNo;c_companyName;c_inspSchedlDate;c_inspectionreportStatus;c_reportdate;id",
-            "hrefParam": "serReqDmccSrNo;company;scheduledate;reportstatus;reportdate;id",
+            "href": "http://localhost:8080/jw/web/userview/ofc_app/v/_/inspectionectionectionreportvw",
+            "hrefColumn": "C_serReqDmccSrNo;c_companyName;c_inspSchedlDate;c_inspectionreportStatus;c_reportdate;id;id;id",
+            "hrefParam": "serReqDmccSrNo;company;scheduledate;reportstatus;reportdate;id;id;id",
             "label": "View Report",
             "rules": [{
                 "field": "c_status",
