--- a/lists/ofc_app_inspector_job_history.json
+++ b/lists/ofc_app_inspector_job_history.json
@@ -241,7 +241,7 @@
         "properties": {
             "confirmation": "",
             "datalist_type": "row_action",
-            "href": "http://localhost:8080/jw/web/userview/ofc_app/v/_/inspectionreportview",
+            "href": "http://localhost:8080/jw/web/userview/ofc_app/v/_/viewReport",
             "hrefColumn": ";c_companyName;c_inspSchedlDate;c_inspectionreportStatus;c_reportdate;id;id;id",
             "hrefParam": "serReqDmccSrNo;company;scheduledate;reportstatus;reportdate;id;id;id",
             "label": "View Report",
@@ -251,7 +251,7 @@
                 "operator": "=",
                 "value": "Inspection Completed"
             }],
-            "target": "_self"
+            "target": "popup"
         },
         "type": "text"
     }],
