--- a/forms/serReqForm_approval_action.json
+++ b/forms/serReqForm_approval_action.json
@@ -50,8 +50,13 @@
                             },
                             {
                                 "grouping": "",
-                                "label": "Rejected",
-                                "value": "Rejected"
+                                "label": "In-Progress",
+                                "value": "In-Progress"
+                            },
+                            {
+                                "grouping": "",
+                                "label": "",
+                                "value": ""
                             }
                         ],
                         "optionsBinder": {
