--- a/forms/serReqForm_approval_action.json
+++ b/forms/serReqForm_approval_action.json
@@ -106,11 +106,46 @@
         }
     }],
     "properties": {
-        "elementUniqueKey": "4895",
+        "description": "",
         "id": "serReqForm_approval_action",
-        "loadBinder": {"className": "org.joget.apps.form.lib.WorkflowFormBinder"},
+        "loadBinder": {
+            "className": "org.joget.apps.form.lib.WorkflowFormBinder",
+            "properties": {}
+        },
         "name": "Service Request Form Approval Action",
-        "storeBinder": {"className": "org.joget.apps.form.lib.WorkflowFormBinder"},
+        "noPermissionMessage": "",
+        "permission": {
+            "className": "",
+            "properties": {}
+        },
+        "postProcessor": {
+            "className": "org.joget.apps.app.lib.MultiTools",
+            "properties": {
+                "comment": "",
+                "runInMultiThread": "",
+                "tools": [
+                    {
+                        "className": "org.joget.tutorial.WorkflowVariableUpdateTool",
+                        "properties": {"workflowVarMapping": [{
+                            "changeValueTo": "#form.ofc_ofc_category_tab.ofc_category_name[{form.ofc_serReqs_tab.ofc_category_name}]#",
+                            "variable": "serviceCategoryType"
+                        }]}
+                    },
+                    {
+                        "className": "org.joget.apps.app.lib.DatabaseUpdateTool",
+                        "properties": {
+                            "jdbcDatasource": "default",
+                            "query": "select * from  ofc_serReqs_tab.ofc_category_name \r\n"
+                        }
+                    }
+                ]
+            }
+        },
+        "postProcessorRunOn": "create",
+        "storeBinder": {
+            "className": "org.joget.apps.form.lib.WorkflowFormBinder",
+            "properties": {}
+        },
         "tableName": "ofc_serReqs_tab_a"
     }
 }
