--- a/forms/serReqForm_approval.json
+++ b/forms/serReqForm_approval.json
@@ -86,7 +86,7 @@
                                 "autoHandleFiles": "",
                                 "autoHandleWorkflowVariable": "true",
                                 "jdbcDatasource": "default",
-                                "sql": "select c_doctype,c_description,c_fielupload where c_referencekey = '#requestParam.id' and c_description <> 'Approved'"
+                                "sql": "select c_doctype,c_description,c_fielupload where c_referencekey = '#requestParam.id#'"
                             }
                         },
                         "options": [
