--- a/forms/serReqForm_approval.json
+++ b/forms/serReqForm_approval.json
@@ -95,6 +95,19 @@
                     {
                         "className": "org.joget.apps.form.lib.HiddenField",
                         "properties": {
+                            "id": "status",
+                            "useDefaultWhenEmpty": "",
+                            "validator": {
+                                "className": "",
+                                "properties": {}
+                            },
+                            "value": "",
+                            "workflowVariable": ""
+                        }
+                    },
+                    {
+                        "className": "org.joget.apps.form.lib.HiddenField",
+                        "properties": {
                             "id": "approval_status",
                             "useDefaultWhenEmpty": "",
                             "validator": {
@@ -125,6 +138,15 @@
                                 "properties": {}
                             },
                             "subFormParentId": "parent_id"
+                        }
+                    },
+                    {
+                        "className": "org.joget.apps.form.lib.CustomHTML",
+                        "properties": {
+                            "autoPopulate": "",
+                            "id": "field7",
+                            "label": "",
+                            "value": "<script>\r\n\r\n// Get the form and submit button elements\r\nvar form = document.getElementById(\"serReqForm_approval\");\r\nvar submitButton = document.getElementById(\"submit\");\r\n\r\n// Add event listener for form submission\r\nform.addEventListener(\"submit\", function(event) {\r\n\r\nvar inspSchedlDate = document.querySelector('input[name=\"inspSchedlDate\"]'); // Get the element by name\r\nvar inputValue = inspSchedlDate.value; // Get the value of the element\r\n \r\nlet originalDate = new Date(inputValue);\r\n\r\n// Subtract 2 hours from the specific date and time\r\noriginalDate.setHours(originalDate.getHours() - 2);\r\n\r\n// Format the date and time with AM/PM\r\nvar hours = originalDate.getHours();\r\nvar amPM = hours >= 12 ? 'PM' : 'AM';\r\n// Format the date and time\r\nvar formattedDate = (\"0\" + originalDate.getDate()).slice(-2) + \"/\"\r\n                    + (\"0\" + (originalDate.getMonth() + 1)).slice(-2) + \"/\"\r\n                    + originalDate.getFullYear() + \" \"\r\n                    + (\"0\" + originalDate.getHours()).slice(-2) + \":\"\r\n                    + (\"0\" + originalDate.getMinutes()).slice(-2)+ \" \"\r\n                    + amPM;\r\n                   \r\nlet rescheduleLinkExpireDate = document.getElementById(\"custRescheduleLinkExpireDateTime\");\r\nrescheduleLinkExpireDate.value = formattedDate ;\r\n//// alert(formattedDate);  \r\n  \r\n  \r\n  \r\n});\r\n \r\n\r\n\r\n\r\n\r\n\r\n////alert(\"Form submitted!\"+inputValue);\r\n\r\n\r\n<\/script>"
                         }
                     }
                 ],
@@ -266,11 +288,18 @@
             "properties": {}
         },
         "postProcessor": {
-            "className": "org.joget.tutorial.WorkflowVariableUpdateTool",
-            "properties": {"workflowVarMapping": [{
-                "changeValueTo": "#form.ofc_ofc_category_tab.ofc_category_name[{form.ofc_serReqs_tab.ofc_category_name}]#",
-                "variable": "serviceCategoryType"
-            }]}
+            "className": "org.joget.apps.app.lib.MultiTools",
+            "properties": {
+                "comment": "",
+                "runInMultiThread": "",
+                "tools": [{
+                    "className": "org.joget.tutorial.WorkflowVariableUpdateTool",
+                    "properties": {"workflowVarMapping": [{
+                        "changeValueTo": "#form.ofc_ofc_category_tab.ofc_category_name[{form.ofc_serReqs_tab.ofc_category_name}]#",
+                        "variable": "serviceCategoryType"
+                    }]}
+                }]
+            }
         },
         "postProcessorRunOn": "create",
         "storeBinder": {
