Update list serviceRequestListApproval.

--- a/lists/serviceRequestListApproval.json
+++ b/lists/serviceRequestListApproval.json
@@ -18,6 +18,12 @@
                     "join": "OR",
                     "operator": "=",
                     "value": "In-Progress"
+                },
+                {
+                    "field": "status",
+                    "join": "OR",
+                    "operator": "=",
+                    "value": "On Approval"
                 }
             ],
             "formDefId": "serReqForm",
